--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dependencies": {
         "axios": "^1.7.7",
         "vue": "^3.5.3",
+        "vue-gtag-next": "^1.14.0",
         "vue-router": "^4.4.5"
     }
 }
